--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,18 @@
-<p>profile works!</p>
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Gemarie Matobato</mat-card-title>
+    <mat-card-subtitle>Student</mat-card-subtitle>
+    <img mat-card-xl-image src="../../assets/me.png" />
+  </mat-card-title-group>
+  <mat-card-content>
+    <h1>Gemarie Matobato</h1>
+    <div class="details">
+      <h4><mat-icon>person</mat-icon>Age: 21</h4>
+      <h4><mat-icon>room</mat-icon>Address: Brgy. 78</h4>
+      <h4>
+        <mat-icon>University</mat-icon>University: Eastern Visayas State
+        University
+      </h4>
+    </div>
+  </mat-card-content>
+</mat-card>
