--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,1 +1,15 @@
-<p>gallery works!</p>
+
+<div class="gallery_container">
+  <h1>Gallery</h1>
+
+  <div class="content">
+    <img src="../../assets/me.png" alt="">
+    <img src="../../assets/me.png" alt="">
+    <img src="../../assets/me.png" alt="">
+    <img src="../../assets/me.png" alt="">
+
+    <img src="../../assets/me.png" alt="">
+    <img src="../../assets/me.png" alt="">
+    <img src="../../assets/me.png" alt="">
+  </div>
+</div>
