--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,24 @@
-<p>contact works!</p>
+<div class="contact_container">
+  <h1>Contact Me</h1>
+
+  <div class="content">
+    <div class="container">
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Your name</mat-label>
+        <input matInput>
+      </mat-form-field>
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Your email</mat-label>
+        <input matInput>
+      </mat-form-field>
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Your message</mat-label>
+        <input matInput>
+      </mat-form-field>
+
+    </div>
+    <div class="container">
+      <h4>have a project in mind? or just want to say hi? feel free to send me a message</h4>
+    </div>
+  </div>
+</div>
